logs/service/build.make.029.log
Scanning dependencies of target pubvel_discrete_motion
[ 16%] Building CXX object CMakeFiles/pubvel_discrete_motion.dir/src/pubvel_discrete_motion.cpp.o
[ 50%] Built target spawn_turtle
[ 83%] Built target pubvel_toggle
/home/ros-industrial/HW8/src/service/src/pubvel_discrete_motion.cpp: In function ‘int main(int, char**)’:
/home/ros-industrial/HW8/src/service/src/pubvel_discrete_motion.cpp:70:6: error: ‘sppinOnce’ is not a member of ‘ros’
     {ros::sppinOnce();
      ^
CMakeFiles/pubvel_discrete_motion.dir/build.make:62: recipe for target 'CMakeFiles/pubvel_discrete_motion.dir/src/pubvel_discrete_motion.cpp.o' failed
make[2]: *** [CMakeFiles/pubvel_discrete_motion.dir/src/pubvel_discrete_motion.cpp.o] Error 1
CMakeFiles/Makefile2:67: recipe for target 'CMakeFiles/pubvel_discrete_motion.dir/all' failed
make[1]: *** [CMakeFiles/pubvel_discrete_motion.dir/all] Error 2
Makefile:138: recipe for target 'all' failed
make: *** [all] Error 2
